--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
 }
 
 .logo {
@@ -39,4 +37,27 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.app-container {
+  display: flex;
+  height: 100vh;
+  width: 100%;
+}
+
+.pokemon-list-container {
+  flex: 1;
+  overflow-y: auto;
+}
+
+.pokemon-details-container {
+  display: flex;
+  flex: 1;
+  overflow-y: auto;
+}
+
+.pokemon-details-container > * {
+  flex: 1;
+  width: 100%;
+  box-sizing: border-box;
 }
