--- a/src/components/PokemonList.css
+++ b/src/components/PokemonList.css
@@ -21,3 +21,10 @@ ul li {
   align-items: center;
   gap: 10px;
 }
+
+.controls {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
