--- a/src/App.css
+++ b/src/App.css
@@ -56,8 +56,12 @@
   overflow-y: auto;
 }
 
-.pokemon-details-container > * {
+.pokemon-chart {
   flex: 1;
   width: 100%;
   box-sizing: border-box;
+}
+
+.pokemon-details {
+  width: 50%;
 }
