--- a/src/components/PokemonCharts.css
+++ b/src/components/PokemonCharts.css
@@ -1,8 +1,15 @@
+.parent-container {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
 .charts-container {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
+  flex: 3;
 }
 
 .chart-item {
@@ -14,4 +21,11 @@
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 8px;
+}
+
+.chart-filters {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  flex: 1;
 }
